--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Kurippu</title>
+    <title>DayBook</title>
 
     <link href="styles/fontello.css" rel="stylesheet">
     <link href="styles/default.css" rel="stylesheet">
