--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link href="styles/fontello.css" rel="stylesheet">
     <link href="styles/default.css" rel="stylesheet">
+    <link href="styles/explain.css" rel="stylesheet">
 
     <script src='scripts/lib/jquery-1.10.2.js'></script>
     <script src='scripts/lib/underscore.min.js'></script>
@@ -15,31 +16,45 @@
     <script src='scripts/lib/mousetrap.min.js'></script>
     <!--<script src="https://www.dropbox.com/static/api/dropbox-datastores-1.2-latest.js" type="text/javascript"></script>-->
     <script src='scripts/lib/dropbox-datastores-1.2-latest.js'></script>
+    <script src='scripts/lib/jquery.joyride-2.1.js'></script>
 
     <script src="scripts/extensions.js"></script>
     <script src="scripts/storage.js"></script>
     <script src="scripts/model.js"></script>
     <script src="scripts/view.js"></script>
+    <script src="scripts/lib/explain.js"></script>
 </head>
 
 <body>
 <script>
-    //Default to https by redirect
-    var host = "day-book.github.io";
-    if ((host == window.location.host) && (window.location.protocol != "https:")) {
-        window.location.protocol = "https";
-    }
+    $(window).load(function () {
+        //Default to https by redirect
+        var host = "day-book.github.io";
+        if ((host == window.location.host) && (window.location.protocol != "https:")) {
+            window.location.protocol = "https";
+        }
+    })
 </script>
 
-<div class="banner">
+<div class="open-banner">
+    <div class="heading">DayBook (குறிப்பேடு)</div>
+    A personal dairy which enables you to introspect better
+    <div class="controls">
+        <button class="demo">Demo</button>
+        <button class="login">Sign In with Dropbox</button>
+    </div>
+</div>
+
+<div class="banner site">
     <span class="title"> DayBook (குறிப்பேடு) </span>
     <span class="username"> ... </span>
 </div>
-<svg id="container">
+<svg id="container" class="site">
 </svg>
 <div class="note-popup" style="display:none">
     <i class="icon-cancel close"></i>
     <textarea disabled class="content"></textarea>
+
     <div class="controls">
         <button class="delete">Delete</button>
     </div>
@@ -47,19 +62,28 @@
 <div class="new-note-popup" style="display: none">
     <div>New Note</div>
     <i class="icon-cancel close"></i>
-    <textarea class="content"></textarea>
-    <input type="text" class="tag" placeholder="Tag"/>
-    <input type="text" class="date" placeholder="dd/mm/yyyy"/>
+    <textarea class="content mousetrap"></textarea>
+    <input type="text" class="tag mousetrap" placeholder="Tag"/>
+    <input type="text" class="date mousetrap" placeholder="dd/mm/yyyy"/>
     <button class="save">Save</button>
 </div>
-<div class="shortcuts">
-     <span class="key">a</span> : New Note  &nbsp;&nbsp;
+<div class="shortcuts site">
+    <span class="key">Ctrl + n</span> : New Note &nbsp;&nbsp;
     <span class="key">→</span> : Scroll 1 day advance &nbsp;&nbsp;
     <span class="key">←</span> : Scroll 1 day before &nbsp;&nbsp;
     <span class="key">Shift + →</span> : Scroll 1 week advance &nbsp;&nbsp;
     <span class="key">Shift + ←</span> : Scroll 1 week before
 </div>
 <script src="scripts/init.js"></script>
+
+<!-- Tour -->
+<ol id="intro" style="display:none">
+    <li data-selector=".banner">This is the awesome banner at your disposal</li>
+    <li data-selector=".shortcuts" data-position="top">Find here your awesome shortcuts</li>
+</ol>
+<script>
+
+</script>
 
 </body>
 </html>
