--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 </script>
 
 <div class="open-banner">
+    <img src="images/logo.png"/>
     <div class="heading">DayBook (குறிப்பேடு)</div>
-    A personal dairy which enables you to introspect better
+    A personal dairy to introspect
     <div class="controls">
         <button class="demo">Demo</button>
         <button class="login">Sign In with Dropbox</button>
