removed mousetrap for inputs

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 <div class="new-note-popup" style="display: none">
     <div>New Note</div>
     <i class="icon-cancel close"></i>
-    <textarea class="content mousetrap"></textarea>
-    <input type="text" class="tag mousetrap" placeholder="Tag"/>
-    <input type="text" class="date mousetrap" placeholder="dd/mm/yyyy"/>
+    <textarea class="content"></textarea>
+    <input type="text" class="tag" placeholder="Tag"/>
+    <input type="text" class="date" placeholder="dd/mm/yyyy"/>
     <button class="save">Save</button>
 </div>
 <div class="shortcuts site">
