--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="open-banner">
     <img src="images/logo.png"/>
     <div class="heading">DayBook (குறிப்பேடு)</div>
-    A personal dairy to introspect
+    A personal diary to introspect
     <div class="controls">
         <button class="demo">Demo</button>
         <button class="login">Sign In with Dropbox</button>
