--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     <button class="login">Sign In with Dropbox</button>
 </div>
 <div class="shortcuts site">
-    <span class="key">Ctrl + n</span> : New Note &nbsp;&nbsp;
+    <span class="key">Shift + n</span> : New Note &nbsp;&nbsp;
     <span class="key">→</span> : Scroll 1 day advance &nbsp;&nbsp;
     <span class="key">←</span> : Scroll 1 day before &nbsp;&nbsp;
-    <span class="key">Ctrl + →</span> : Scroll 1 week advance &nbsp;&nbsp;
-    <span class="key">Ctrl + ←</span> : Scroll 1 week before
+    <span class="key">Shift + →</span> : Scroll 1 week advance &nbsp;&nbsp;
+    <span class="key">Shift + ←</span> : Scroll 1 week before
 </div>
 <script src="scripts/init.js"></script>
 
