Changed the default shortcut key to shift

--- a/index.html
+++ b/index.html
@@ -86,11 +86,21 @@
     <button class="login">Sign In with Dropbox</button>
 </div>
 <div class="shortcuts site">
-    <span class="key">Shift + n</span> : New Note &nbsp;&nbsp;
-    <span class="key">→</span> : Scroll 1 day advance &nbsp;&nbsp;
-    <span class="key">←</span> : Scroll 1 day before &nbsp;&nbsp;
-    <span class="key">Shift + →</span> : Scroll 1 week advance &nbsp;&nbsp;
-    <span class="key">Shift + ←</span> : Scroll 1 week before
+    <span class="shortcut">
+        <span class="key">Shift</span> + <span class="key">n</span> : New Note &nbsp;&nbsp;
+    </span>
+    <span class="shortcut">
+        <span class="key">→</span> : Scroll 1 day advance &nbsp;&nbsp;
+    </span>
+    <span class="shortcut">
+        <span class="key">←</span> : Scroll 1 day before &nbsp;&nbsp;
+    </span>
+    <span class="shortcut">
+        <span class="key">Shift</span> + <span class="key">→</span> : Scroll 1 week advance &nbsp;&nbsp;
+    </span>
+    <span class="shortcut">
+        <span class="key">Shift</span> + <span class="key">←</span> : Scroll 1 week before
+    </span>
 </div>
 <script src="scripts/init.js"></script>
 
