--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>DayBook</title>
 
-    <link href="styles/fontello.css" rel="stylesheet">
-    <link href="styles/default.css" rel="stylesheet">
-    <link href="styles/explain.css" rel="stylesheet">
+    <link href="styles/fontello.css" rel="stylesheet"/>
+    <link href="styles/default.css" rel="stylesheet"/>
+    <link href="styles/explain.css" rel="stylesheet"/>
+    <link href="styles/vex.css"  rel="stylesheet"/>
+    <link href="styles/vex-theme-top.css"  rel="stylesheet"/>
 
     <script src='scripts/lib/jquery-1.10.2.js'></script>
     <script src='scripts/lib/underscore.min.js'></script>
@@ -16,7 +18,7 @@
     <script src='scripts/lib/mousetrap.min.js'></script>
     <!--<script src="https://www.dropbox.com/static/api/dropbox-datastores-1.2-latest.js" type="text/javascript"></script>-->
     <script src='scripts/lib/dropbox-datastores-1.2-latest.js'></script>
-    <script src='scripts/lib/jquery.joyride-2.1.js'></script>
+    <script src='scripts/lib/vex.combined.min.js'></script>
 
     <script src="scripts/extensions.js"></script>
     <script src="scripts/keyboard.js"></script>
