--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="styles/explain.css" rel="stylesheet"/>
     <link href="styles/vex.css"  rel="stylesheet"/>
     <link href="styles/vex-theme-top.css"  rel="stylesheet"/>
+    <link href="styles/jquery-ui.css"  rel="stylesheet"/>
 
     <script src='scripts/lib/jquery-1.10.2.js'></script>
     <script src='scripts/lib/underscore.min.js'></script>
@@ -19,6 +20,7 @@
     <!--<script src="https://www.dropbox.com/static/api/dropbox-datastores-1.2-latest.js" type="text/javascript"></script>-->
     <script src='scripts/lib/dropbox-datastores-1.2-latest.js'></script>
     <script src='scripts/lib/vex.combined.min.js'></script>
+    <script src='scripts/lib/jquery-ui.min.js'></script>
 
     <script src="scripts/extensions.js"></script>
     <script src="scripts/keyboard.js"></script>
@@ -75,7 +77,7 @@
         <button class="delete">Delete</button>
     </div>
 </div>
-<div class="new-note-popup" style="display: none">
+<div class="new-note-popup autocompl" style="display: none">
     <div class="heading">New Note</div>
     <i class="icon-cancel close"></i>
     <textarea class="content"></textarea>
