--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <script src="scripts/global-event.js"></script>
     <script src="scripts/extensions.js"></script>
     <script src="scripts/keyboard.js"></script>
-    <script src="scripts/storage.js"></script>
     <script src="scripts/firebase-storage.js"></script>
     <script src="scripts/demo-storage.js"></script>
     <script src="scripts/model.js"></script>
@@ -107,7 +106,9 @@
     <textarea disabled class="content"></textarea>
 
     <div class="footer">
-        <button class="delete"><i class="icon-cancel"></i> Delete</button>
+        <i class="icon-edit btn edit" title="Edit"></i>
+        <i class="icon-ok btn update" title="Save"></i>
+        <i class="icon-cancel btn delete" title="Delete"></i>
     </div>
 </div>
 
